--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pictus FE</title>
+    <title>Hillel Online</title>
     <link rel="stylesheet" href="dist/css/styles.min.css">
 </head>
 <body>
