@media for mobile, sectio intro
@media rules for mobile screen without mobile menu, section intro

--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
                 <div class="intro__info intro__info_dot">
                     
                     <div class="intro__info_item">
-                        <span>За неделю записался</span>
-                        <span><pre> </pre></span>
+                        <span>За неделю записался </span>
+                        <!-- <span><pre> </pre></span> -->
                         <span class="intro__info_item_green">1 человек</span>
                     </div>
 
@@ -124,8 +124,8 @@
                     </div>
 
                     <div class="intro__info_item">
-                        <span>Осталось</span>
-                        <span><pre> </pre></span>
+                        <span>Осталось </span>
+                        <!-- <span><pre> </pre></span> -->
                         <span class="intro__info_item_green">3 места</span>
                     </div>
 
