--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a href='tel:0800330867' class="mob-header__phone"><img src="./assets/images/svgs/Icons/Phone.svg" alt="phone"></a>
             <img class="mob-header__logo" src="./assets/images/svgs/Logo/LockinMobile.svg"></img>
             <button class="mob-header__burger">
-                <img src="./assets/images/svgs/Icons/Burger.svg" alt="">
+                <img src="./assets/images/svgs/Icons/Burger.svg" alt="burger">
             </button>
         </div>
 
@@ -40,10 +40,18 @@
                 <div class="city-switch__wrapper">
                     
                     <ul class="city-switch">
-                        <li class="city-switch__item">Киев</li>
-                        <li class="city-switch__item">Одесса</li>
-                        <li class="city-switch__item">Днепр</li>
-                        <li class="city-switch__item">Харьков</li>
+                        <li>
+                            <button class="city-switch__item">Киев</button>
+                        </li>
+                        <li>
+                            <button class="city-switch__item">Одесса</button>
+                        </li>
+                        <li>
+                            <button class="city-switch__item">Днепр</button>
+                        </li>
+                        <li>
+                            <button class="city-switch__item">Харьков</button>
+                        </li>
                     </ul>
 
                     <div class="city-switch__logo">
@@ -73,12 +81,12 @@
                 <div class="intro__top-bar_inner">
 
                     <div class="city-switch__wrapper">
-                        <ul class="city-switch">
-                            <li class="city-switch__item">Киев</li>
-                            <li class="city-switch__item">Одесса</li>
-                            <li class="city-switch__item">Днепр</li>
-                            <li class="city-switch__item">Харьков</li>
-                        </ul>
+                        <div class="city-switch">
+                                <button class="city-switch__item">Киев</button>
+                                <button class="city-switch__item">Одесса</button>
+                                <button class="city-switch__item">Днепр</button>
+                                <button class="city-switch__item">Харьков</button>
+                        </div>
                         <div class="city-switch__logo">
                             <img src="./assets/images/svgs/Logo/OnlineOnly.svg" alt="OnlineOnly">
                         </div>
@@ -119,7 +127,7 @@
                         <li class="main-menu__item">
                             <a href="#">
                                 <span>курсы</span>
-                                <img class='main-menu__item_arrow' src="./assets/images/svgs/Icons/ArrowInline.svg" alt="">
+                                <img class='main-menu__item_arrow' src="./assets/images/svgs/Icons/ArrowInline.svg" alt="arrow">
                             </a>
                         </li>
                         <li class="main-menu__item">
